tests/general/phase0/ssz_generic/basic_vector/invalid/vec_uint16_16_random_one_byte_more/serialized.ssz
qЧVШ’k`Ѓ‹Іъйь…ВjЯк"ЃҐЧџХэШ.·ћPИЊ